--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+# configuration file (added by Gbz)
+web.conf
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
