--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 ################################################################################
 
 /.vs/WebAPI/v15/.suo
+/.vs/VSWorkspaceState.json
+/.vs/ValaisBooking_WebAPI/v15/Server/sqlite3/storage.ide-wal
+/.vs/ValaisBooking_WebAPI/v15/Server/sqlite3/storage.ide-shm
+/.vs/ValaisBooking_WebAPI/v15/Server/sqlite3/storage.ide
+/.vs/ValaisBooking_WebAPI/v15/Server/sqlite3/db.lock
+/.vs/ValaisBooking_WebAPI/v15/.suo
+/.vs/slnx.sqlite
+/.vs/config/applicationhost.config
