--- a/ValaisBooking_WebAPI/Web.config
+++ b/ValaisBooking_WebAPI/Web.config
@@ -15,7 +15,7 @@
 																	res://*/Model_VsBook_WebAPI.msl;
 												provider=System.Data.SqlClient;
 												provider connection string=
-														&quot;Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\uadmin\source\repos\ValaisBooking_WebAPI\ValaisBooking_WebAPI\App_Data\ValaisBooking.mdf;Integrated Security=True;MultipleActiveResultSets=True;Connect Timeout=30;Application Name=EntityFramework;&quot;"
+														&quot;Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\uadmin\source\repos\ValaisBooking_605_3\ValaisBooking_WebAPI\ValaisBooking_WebAPI\App_Data\ValaisBooking.mdf;Integrated Security=True;MultipleActiveResultSets=True;Connect Timeout=30;Application Name=EntityFramework;&quot;"
 		providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
