--- a/ValaisBooking_WebAPI/ValaisBooking_WebAPI.csproj
+++ b/ValaisBooking_WebAPI/ValaisBooking_WebAPI.csproj
@@ -152,6 +152,13 @@
       <DependentUpon>Model_VsBook_WebAPI.edmx</DependentUpon>
     </Content>
     <None Include="packages.config" />
+    <Content Include="Web.config" />
+    <None Include="Web.Debug.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
+    <None Include="Web.Release.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
