--- a/ValaisBooking_WebAPI/bin/ValaisBooking_WebAPI.dll.config
+++ b/ValaisBooking_WebAPI/bin/ValaisBooking_WebAPI.dll.config
@@ -9,6 +9,9 @@
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 	</configSections>
   <connectionStrings>
+		
+		<!-- Connection string Gabriel-->
+		
 		<add name="ValaisBookingEntities1"
 			connectionString="metadata=res://*/Model_VsBook_WebAPI.csdl|
 																	res://*/Model_VsBook_WebAPI.ssdl|
@@ -17,6 +20,17 @@
 												provider connection string=
 														&quot;Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\uadmin\source\repos\ValaisBooking_605_3\ValaisBooking_WebAPI\ValaisBooking_WebAPI\App_Data\ValaisBooking.mdf;Integrated Security=True;MultipleActiveResultSets=True;Connect Timeout=30;Application Name=EntityFramework;&quot;"
 		providerName="System.Data.EntityClient" />
+		
+		<!-- Connection string Montaine-->
+		
+		<!--<add name="ValaisBookingEntities1"
+			connectionString="metadata=res://*/Model_VsBook_WebAPI.csdl|
+																			res://*/Model_VsBook_WebAPI.ssdl|
+																			res://*/Model_VsBook_WebAPI.msl;
+														provider=System.Data.SqlClient;
+														provider connection string=
+																&quot;Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\uadmin\source\repos\ValaisBooking_605_3\ValaisBooking_WebAPI\ValaisBooking_WebAPI\App_Data\ValaisBooking.mdf;Integrated Security=True;MultipleActiveResultSets=True;Connect Timeout=30;Application Name=EntityFramework;&quot;"
+		providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
