get and delete from reservations and reservationsDetails are working with custom method names and cascade delete on reservations

--- a/ValaisBooking_WebAPI/bin/ValaisBooking_WebAPI.dll.config
+++ b/ValaisBooking_WebAPI/bin/ValaisBooking_WebAPI.dll.config
@@ -21,15 +21,15 @@
 														&quot;Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\uadmin\source\repos\ValaisBooking_605_3\ValaisBooking_WebAPI\ValaisBooking_WebAPI\App_Data\ValaisBooking.mdf;Integrated Security=True;MultipleActiveResultSets=True;Connect Timeout=30;Application Name=EntityFramework;&quot;"
 		providerName="System.Data.EntityClient" />
 		
+    
 		<!-- Connection string Montaine-->
-		
 		<!--<add name="ValaisBookingEntities1"
 			connectionString="metadata=res://*/Model_VsBook_WebAPI.csdl|
 																			res://*/Model_VsBook_WebAPI.ssdl|
 																			res://*/Model_VsBook_WebAPI.msl;
 														provider=System.Data.SqlClient;
 														provider connection string=
-																&quot;Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\uadmin\source\repos\ValaisBooking_605_3\ValaisBooking_WebAPI\ValaisBooking_WebAPI\App_Data\ValaisBooking.mdf;Integrated Security=True;MultipleActiveResultSets=True;Connect Timeout=30;Application Name=EntityFramework;&quot;"
+																&quot;Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Montaine\Desktop\Cours HES-SO\GitHub\WebAPI\ValaisBooking_WebAPI\App_Data\ValaisBooking.mdf;Integrated Security=True;MultipleActiveResultSets=True;Connect Timeout=30;Application Name=EntityFramework;&quot;"
 		providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings></appSettings>
